# setu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  justfile  opencode.json  package-lock.json  render.yaml
docs/: abstract.md  api-contract.md  architecture.md  coding-conventions.md  prd.md  roadmap.md  tech-stack-decisions.md  techStack.md  user-stories.md
docs/adr/: ADR-001-sarvam-ai-voice-pipeline.md  ADR-002-render-workflows-orchestration.md  ADR-003-supabase-persistence.md  ADR-004-resumability-via-supabase-state.md  ADR-005-monorepo-structure.md  ADR-006-config-driven-schemes.md
setu-audio/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test_db_logs.py  test_db_tables.py  test_pdf_exist.py  test_stt.py  test_ws.py
setu-audio/app/: audio_utils.py  main.py  sarvam_client.py  test_main.py  workflow_trigger.py
setu-web/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
setu-web/src/: App.jsx  App.tsx  index.css  main.jsx
setu-workflows/: .env.example  README.md  main.py  requirements.txt  sarvam_llm.py  scheme_loader.py  supabase_client.py  test_pipeline.py
setu-workflows/schemes/: caste_cert.json  income_cert.json  pm_kisan.json
setu-workflows/tasks/: __init__.py  document_collection.py  form_generation.py  intake.py  notify.py  validation.py
setu-workflows/templates/: caste_cert.html  income_cert.html  pm_kisan.html
supabase/migrations/: 001_setu_schema.sql  002_fix_constraints.sql  (+2 more)
(+20 files in other folders)
