[project]
name = "setu-audio"
version = "0.0.1"
description = "Setu voice bridge: WebSocket audio streaming with Saaras STT and Bulbul TTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "supabase>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
